# SpeedReader

./: .gitignore  AppController.cpp  AppController.hpp  CMakeLists.txt  README.md  SpeedReader.pro  SpeedReader.pro.user.a014077.4.9-pre1  SpeedReader.pro.user.fba89d0.21  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  textdisplaywidget.cpp  textdisplaywidget.h
